- Ajout du toast erreur lorsqu'il n’y a pas de nom saisi à la création de la kapsule. - Ajout du z-index sur les toasts. - Ajout du stop.prevent pour copier le code de la kapsule.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.Vue-Toastification__container {
+    z-index: 100000 !important;
+}
